re-factor security config